2008-09-30  Graham Cobb  <g+770@cobb.uk.net>

	* src/main.c: Add Hildon includes back in so osso_initialize can 
	be called.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (enum mdb_fields): Add MDB_INC_PLAY_COUNT.
	(struct music_db_info): Add field play_count.
	* src/musicdb.c (music_db_create_table): Add field play_count.
	(music_db_set_info): If MDB_INC_PLAY_COUNT is set, increment the
	play_count field.
	* src/starling.c (search_text_gen): Treat a word with the
	"play-count:" prefix as a request to search on the play count.
	(player_state_changed): Add MDB_INC_PLAY_COUNT to INFO.FIELDS.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (starling_scroll_to): Scroll the track to 0.33
	the vertical height, not 0.5.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (search_text_regen): If the search text is empty
	or disabled and the constraint is NULL, then do nothing.

	(set_position_text): New function.
	(starling_run): Create a button to clear the search text.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add field search_enabled.
	(KEY_SEARCH_ENABLED): Define.
	(struct deserialize_bottom_half): Add field search_enabled.
	(deserialize_bottom_half): Set ST->SEARCH_ENABLED's active state
	according to BH->SEARCH_ENABLED.
	(deserialize): Set BH->SEARCH_ENABLED according to
	KEY_SEARCH_ENABLED.  Only search if BH->SEARCH_ENABLED is true.
	(serialize): Save ST->SEARCH_ENABLED's active state.
	(search_text_regen): If ST->SEARCH_ENABLED is active, generate the
	search text based on TEXT, other use NULL.
	(search_text_changed): Don't generate a search text menu item if
	ST->SEARCH_ENABLED is not enabled.
	(starling_run): Create a search enabled check button.  Attach
	search_text_changed to its "toggled" signal.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (search_text_gen): Enable searching on a
	particular field.

2008-09-29  Neal H. Walfield  <neal@gnu.org>
