@@ -1,3 +1,12 @@
+2008-09-30  Neal H. Walfield  <neal@gnu.org>
+
+	* src/search.y: New file.
+	* src/Makefile.am (starling_SOURCES): Add search.y.
+	(BUILT_SOURCES): Add search.h and search.c.
+	(AM_YFLAGS): New define.
+	* src/starling.c: Include "search.h".
+	(search_text_gen): Call yyparse to parse the search string.
+
 2008-09-30  Graham Cobb  <g+770@cobb.uk.net>
 
 	* src/main.c: Add Hildon includes back in so osso_initialize can 
